# Dev_RAG

./: .env  .gitignore  pyproject.toml
api/: .gitignore  alembic.ini  docker-compose.yml
api/app/: __init__.py  config.py  request.py  testapp.py
api/app/chat/: routes.py  schemas.py  service.py
api/app/db/: main.py  models.py  routes.py
api/app/files/: routes.py  service.py
api/app/vector_db/: __init__.py  schemas.py  service.py
api/migrations/: env.py  script.py.mako
api/migrations/versions/: 77558d3932c7_init.py  9ddd0b716208_add_chatlog_table.py  d7339a76cc22_init.py
streamapp/: views.py
streamapp/pages/: chat.py  filemanage.py  settings.py
